--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-2022, macos-14]
+        os: [windows-2022]
         addrsize: ["64"]
     runs-on: ${{ matrix.os }}
     steps:
